unpackaged/main/default/objects/sfsp__SalesMetric__c/sfsp__SalesMetric__c.object-meta.xml
<CustomObject>
    <label>Sales Metric</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>