unpackaged/main/default/objects/sfsp__SalesMetric__c/fields/sfsp__Description__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>