unpackaged/main/default/objects/sfsp__SalesMetric__c/fields/sfsp__SalesPlan__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Plan</label>
    <referenceTo>sfsp__SalesPlan__c</referenceTo>
    <relationshipLabel>Sales Metrics</relationshipLabel>
    <relationshipName>SalesMetrics</relationshipName>
    <type>Lookup</type>
</CustomField>