unpackaged/main/default/objects/sfsp__SalesMetric__c/fields/sfsp__SalesPlanMetric__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesPlanMetric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Plan Metric</label>
    <referenceTo>sfsp__SalesMetric__c</referenceTo>
    <relationshipLabel>Sales Scenario Metrics</relationshipLabel>
    <relationshipName>SalesScenarioMetrics</relationshipName>
    <type>Lookup</type>
</CustomField>