unpackaged/main/default/objects/sfsp__SalesMetric__c/fields/sfsp__TargetOverrideEnabled__c.field-meta.xml
<CustomField>
    <fullName>sfsp__TargetOverrideEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow users to set their own, modified target</description>
    <label>OverrideTarget</label>
    <type>Checkbox</type>
</CustomField>