unpackaged/main/default/objects/sfsp__SalesMetric__c/fields/sfsp__Type__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>